Used workaround from https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-with-Java-9